Colab을 통해 생성됨

--- a/week1/student.ipynb
+++ b/week1/student.ipynb
@@ -46,7 +46,7 @@
       "metadata": {
         "id": "4zp-ThgMdsl4"
       },
-      "execution_count": null,
+      "execution_count": 1,
       "outputs": []
     },
     {
@@ -58,7 +58,7 @@
       "metadata": {
         "id": "IgmIKyx4dso4"
       },
-      "execution_count": null,
+      "execution_count": 2,
       "outputs": []
     },
     {
@@ -70,12 +70,12 @@
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 206
+          "height": 327
         },
         "id": "4q5djxDkdsql",
-        "outputId": "2db44133-724c-4217-a57c-2544f0378cff"
+        "outputId": "35de56d6-2f68-446d-d43a-dd17fc8fca63"
       },
-      "execution_count": null,
+      "execution_count": 3,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -97,7 +97,7 @@
             ],
             "text/html": [
               "\n",
-              "  <div id=\"df-c12ba7a8-fdc6-472f-9042-0cdc55429036\" class=\"colab-df-container\">\n",
+              "  <div id=\"df-ba69bfc8-ccee-471a-81ce-55e587acab07\" class=\"colab-df-container\">\n",
               "    <div>\n",
               "<style scoped>\n",
               "    .dataframe tbody tr th:only-of-type {\n",
@@ -188,7 +188,7 @@
               "    <div class=\"colab-df-buttons\">\n",
               "\n",
               "  <div class=\"colab-df-container\">\n",
-              "    <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-c12ba7a8-fdc6-472f-9042-0cdc55429036')\"\n",
+              "    <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-ba69bfc8-ccee-471a-81ce-55e587acab07')\"\n",
               "            title=\"Convert this dataframe to an interactive table.\"\n",
               "            style=\"display:none;\">\n",
               "\n",
@@ -240,12 +240,12 @@
               "\n",
               "    <script>\n",
               "      const buttonEl =\n",
-              "        document.querySelector('#df-c12ba7a8-fdc6-472f-9042-0cdc55429036 button.colab-df-convert');\n",
+              "        document.querySelector('#df-ba69bfc8-ccee-471a-81ce-55e587acab07 button.colab-df-convert');\n",
               "      buttonEl.style.display =\n",
               "        google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "\n",
               "      async function convertToInteractive(key) {\n",
-              "        const element = document.querySelector('#df-c12ba7a8-fdc6-472f-9042-0cdc55429036');\n",
+              "        const element = document.querySelector('#df-ba69bfc8-ccee-471a-81ce-55e587acab07');\n",
               "        const dataTable =\n",
               "          await google.colab.kernel.invokeFunction('convertToInteractive',\n",
               "                                                    [key], {});\n",
@@ -288,7 +288,7 @@
       "metadata": {
         "id": "iKvRX47JfH5Y"
       },
-      "execution_count": null,
+      "execution_count": 4,
       "outputs": []
     },
     {
@@ -307,7 +307,7 @@
         "## Input Box\n",
         "\n",
         "median_fare = 0\n",
-        "\n",
+        "median_fare = np.median(df['Fare'])\n",
         "\n",
         "\n",
         "print(median_fare)"
@@ -317,15 +317,15 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "IxWt2hHadsr6",
-        "outputId": "b39e9074-633c-4dec-90a2-7ededdca7e6f"
+        "outputId": "9b8c899e-ec55-4bea-d09f-076ecd38af06"
       },
-      "execution_count": null,
+      "execution_count": 5,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "0\n"
+            "14.4542\n"
           ]
         }
       ]
@@ -338,7 +338,7 @@
       "metadata": {
         "id": "12P2IQWLdst9"
       },
-      "execution_count": null,
+      "execution_count": 6,
       "outputs": []
     },
     {
@@ -357,8 +357,8 @@
         "## Input Box\n",
         "\n",
         "high_mean_survival_rate = 0\n",
-        "\n",
-        "\n",
+        "mean_survival_rate = df.groupby('Pclass')['Survived'].mean()\n",
+        "high_mean_survival_rate = mean_survival_rate.idxmax()\n",
         "\n",
         "print(high_mean_survival_rate)"
       ],
@@ -367,15 +367,15 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "nZUwTmwldsvT",
-        "outputId": "0a42b498-52d0-4ba2-8515-6b7c1e6e4208"
+        "outputId": "f356dbbe-8698-41a9-d62c-81be3eff5d76"
       },
-      "execution_count": null,
+      "execution_count": 17,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "0\n"
+            "1\n"
           ]
         }
       ]
@@ -388,7 +388,7 @@
       "metadata": {
         "id": "EJHj2QQdsMu8"
       },
-      "execution_count": null,
+      "execution_count": 19,
       "outputs": []
     },
     {
@@ -407,7 +407,7 @@
         "## Input Box\n",
         "\n",
         "age_under_10 = 0\n",
-        "\n",
+        "age_under_10 = len(df[df['Age']<10])\n",
         "\n",
         "\n",
         "print(age_under_10)"
@@ -417,15 +417,15 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "HRxVXO28dsxM",
-        "outputId": "9e19c508-90c5-4ea5-cfeb-135be77dbbde"
+        "outputId": "38a8f60a-6612-47a4-aaca-097cc64b829b"
       },
-      "execution_count": null,
+      "execution_count": 7,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "0\n"
+            "71\n"
           ]
         }
       ]
@@ -438,7 +438,7 @@
       "metadata": {
         "id": "QeWuVrfoscXp"
       },
-      "execution_count": null,
+      "execution_count": 8,
       "outputs": []
     },
     {
@@ -457,7 +457,7 @@
         "## Input Box\n",
         "\n",
         "female_survive_rate = 0\n",
-        "\n",
+        "female_survive_rate = len(df[(df['Sex']== 'female' )&(df['Survived']== 1)])\n",
         "\n",
         "\n",
         "print(female_survive_rate)"
@@ -467,15 +467,15 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "NokBSotBdsyq",
-        "outputId": "4d121395-c177-426d-f974-156d9b078681"
+        "outputId": "bc835828-430c-4c73-a0c1-1769846ae3cf"
       },
-      "execution_count": null,
+      "execution_count": 12,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "0\n"
+            "233\n"
           ]
         }
       ]
@@ -488,7 +488,7 @@
       "metadata": {
         "id": "HM4ZXifAj2MI"
       },
-      "execution_count": null,
+      "execution_count": 20,
       "outputs": []
     },
     {
@@ -510,6 +510,7 @@
         "\n",
         "feature_name = \"feature_name\"\n",
         "\n",
+        "feature_name = \"Fare\"\n",
         "\n",
         "\n",
         "print(feature_name)"
@@ -519,15 +520,15 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "iiVFDM8WlhRm",
-        "outputId": "d1083023-a4e0-4474-a421-2db1c8a5834a"
+        "outputId": "7a0d742f-e806-4385-cf02-f2e7aa829361"
       },
-      "execution_count": null,
+      "execution_count": 14,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "feature_name\n"
+            "Fare\n"
           ]
         }
       ]
@@ -540,7 +541,7 @@
       "metadata": {
         "id": "o_z8Ueu8lhY3"
       },
-      "execution_count": null,
+      "execution_count": 18,
       "outputs": []
     },
     {
@@ -563,20 +564,20 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "iI65ETQKtMGj",
-        "outputId": "27bba53a-0bb3-49a3-a037-cd8872b4c45a"
+        "outputId": "3ce607d6-55e8-46e6-f2fa-9cd24c19b0c6"
       },
-      "execution_count": null,
+      "execution_count": 21,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
             "=== 작성하신 정답 ===\n",
-            "Task 1 :: 0\n",
-            "Task 2 :: 0\n",
-            "Task 3 :: 0\n",
-            "Task 4 :: 0\n",
-            "Task 5 :: feature_name\n"
+            "Task 1 :: 14.4542\n",
+            "Task 2 :: 1\n",
+            "Task 3 :: 71\n",
+            "Task 4 :: 233\n",
+            "Task 5 :: Fare\n"
           ]
         }
       ]
@@ -608,15 +609,15 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "aR-LDElZwGL5",
-        "outputId": "2857883d-ab63-4165-eb38-267fc1e04582"
+        "outputId": "f0f4cdf5-fa23-4dc7-8bd6-43717c7ac29c"
       },
-      "execution_count": null,
+      "execution_count": 22,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "틀린번호 : [1, 2, 3, 4, 5]\n"
+            "탈출!\n"
           ]
         }
       ]
